Fix the back button always going back to en page

--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -10,7 +10,7 @@
             "ariaLabel": 'Back',
             "itemsList": [
                 {
-                    "url": domain_url + '/en/start/',
+                    "url": domain_url + '/' + display_region +  '/start/',
                     "id": "back",
                     "text": 'Back',
                 }
