--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -21,17 +21,17 @@
             {
                 'itemsList': [
                     {
-                        'text': 'PLACEHOLDER WELSH About ONS studies',
+                        'text': 'Ynglŷn ag astudiaethau SYG',
                         'url': 'https://cy.ons.gov.uk/surveys/informationforhouseholdsandindividuals',
                         'target': '_blank'
                     },
                     {
-                        'text': 'PLACEHOLDER WELSH Datganiad hygyrchedd',
+                        'text': 'Datganiad hygyrchedd',
                         'url': 'https://cy.ons.gov.uk/help/accessibility',
                         'target': '_blank'
                     },
                     {
-                        'text': 'PLACEHOLDER WELSH Cysylltu â ni',
+                        'text': 'Cysylltu â ni',
                         'url': 'https://cy.ons.gov.uk/aboutus/contactus/surveyenquiries',
                         'target': '_blank'
                     }
@@ -42,19 +42,18 @@
             {
                 'itemsList': [
                     {
-                        'text': 'PLACEHOLDER WELSH Cwcis',
+                        'text': 'Cwcis',
                         'url': domain_url + '/cy/cookies/',
                     },
                     {
-                        'text': 'PLACEHOLDER WELSH Preifatrwydd a diogelu data',
+                        'text': 'Preifatrwydd a diogelu data',
                         'url': domain_url + '/cy/privacy-and-data-protection/',
                     }
                 ]
             }
         ],
         'copyrightDeclaration': {
-            'copyright': 'PLACEHOLDER WELSH Hawlfraint y Goron a hawliau cronfa ddata 2020 Arolwg Ordnans 100019153.',
-            'text': 'PLACEHOLDER WELSH Mae defnydd o ddata ar gyfeiriadau yn amodol ar y telerau ac amodau.'
+            'copyright': "Hawlfraint y Goron a hawliau cronfa ddata 2020 OS 100019153.",
         }
     }
 -%}
@@ -104,18 +103,20 @@
 {%- endblock -%}
 
 {%- block preHeader -%}
+    {%- autoescape false -%}
     {% set cookiesPageURL = domain_url + '/cy/cookies/' %}
-
     {%- from 'components/cookies-banner/_macro.njk' import onsCookiesBanner -%}
     {{ onsCookiesBanner({
         'lang': 'cy',
         'statementTitle': _('Cookies'),
         'serviceName': '',
         'settingsLinkURL': cookiesPageURL,
-        'statementText': _('<p>To collect information about how you use this website, we use <a href="' + cookiesPageURL + '">cookies.</a></p>
-                        <p>This information helps us improve our services and make sure that the website works as well as possible.</p>'),
+        'statementText': _("To collect information about how you use this website, we use%(open_cookies_link)s cookies.%(close_link)s</br>
+                        This information helps us improve our services and make sure that the website works as well as possible.",
+                        open_cookies_link='<a href="%s">' % cookiesPageURL, close_link='</a>'),
         'preferencesText':  'Gallwch chi <a href="' + cookiesPageURL + '">newid eich dewisiadau o ran cwcis</a> ar unrhyw adeg.'
         })
     }}
+    {% endautoescape %}
 {%- endblock -%}
 
