Add the back button

--- a/app/templates/privacy-and-data-protection.html
+++ b/app/templates/privacy-and-data-protection.html
@@ -7,12 +7,12 @@
 {%- block preMain -%}
     {{
         onsBreadcrumbs({
-            "ariaLabel": 'Back',
+            "ariaLabel": _('Back'),
             "itemsList": [
                 {
                     "url": domain_url + '/' + display_region +  '/start/',
                     "id": "back",
-                    "text": 'Back',
+                    "text": _('Back'),
                 }
             ]
         })
