--- a/app/templates/start-uac-inactive.html
+++ b/app/templates/start-uac-inactive.html
@@ -1,4 +1,20 @@
 {%- extends 'base-' + display_region + '.html' -%}
+{% from "components/breadcrumbs/_macro.njk" import onsBreadcrumbs %}
+
+{%- block preMain -%}
+    {{
+        onsBreadcrumbs({
+            "ariaLabel": _('Back'),
+            "itemsList": [
+                {
+                    "url": domain_url + '/' + display_region +  '/start/',
+                    "id": "back",
+                    "text": _('Back'),
+                }
+            ]
+        })
+    }}
+{%- endblock -%}
 
 {%- block main -%}
 
