--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -17,7 +17,7 @@
                 {
                     "url": domain_url + '/' + display_region + '/start/',
                     "id": "back",
-                    "text": 'Back',
+                    "text": _('Back'),
                  }
             ]
         })
