more welsh translations

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -14,7 +14,7 @@
 {%- endif -%}
 
 {%- set footer_content = {
-        'newTabWarning': 'PLACEHOLDER WELSH The following links open in a new tab',
+        'newTabWarning': 'Mae’r dolenni canlynol yn agor mewn tab newydd',
         'lang': 'cy',
         'crest': true,
         'rows': [
