Remove remaining placeholder welsh translations

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -8,7 +8,7 @@
 
 {%- if ('/cy/start/' in page_url) and (page_url != '/cy/start/') and (timeout != 'true') -%}
     {%- set signout_button_value = {
-            'text': 'PLACEHOLDER WELSH Gadael',
+            'text': 'Gadael',
             'url': url('StartExit:get', display_region='cy')
         }-%}
 {%- endif -%}
