Change radio button legends for proper translations

--- a/app/templates/cookies.html
+++ b/app/templates/cookies.html
@@ -66,7 +66,7 @@
             {{ onsRadios({
                 "id": "cookies-measure-website-comms",
                 "name": "cookies-campaigns",
-                "legend": "Do you want to allow communications tracking?",
+                "legend": _("Cookies that help with our communications"),
                 "legendClasses": "ons-u-vh",
                 "radios": [
                     {
@@ -91,7 +91,7 @@
             {{ onsRadios({
                 "id": "cookies-measure-website-settings",
                 "name": "cookies-settings",
-                "legend": "Do you want to allow settings?",
+                "legend": _("Cookies that remember your settings"),
                 "legendClasses": "ons-u-vh",
                 "radios": [
                     {
