--- a/app/templates/partials/gtm-no-script.html
+++ b/app/templates/partials/gtm-no-script.html
@@ -1,5 +1,4 @@
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ gtm_cont_id }}&gtm_auth=
-{{ gtm_auth }}&gtm_cookies_win=x"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ gtm_cont_id }}&gtm_auth={{ gtm_auth }}&gtm_cookies_win=x"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
