Remove gtm_auth, add gtm_tag_id variable

--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -85,17 +85,15 @@
 
 {%- block head -%}
 
-<!-- Google Analytics -->
-    {%- if gtm_cont_id and gtm_auth -%}
+    {%- if gtm_cont_id -%}
         {%- include 'partials/gtm.html' with context -%}
     {%- endif -%}
-<!-- End Google Analytics -->
 
 {%- endblock -%}
 
 {%- block bodyStart -%}
 
-    {%- if gtm_cont_id and gtm_auth -%}
+    {%- if gtm_cont_id -%}
         {%- include 'partials/gtm-no-script.html' with context -%}
     {%- endif -%}
 
