--- a/app/templates/base-cy.html
+++ b/app/templates/base-cy.html
@@ -91,6 +91,10 @@
 
 {%- endblock -%}
 
+{%- if gtm_tag_id -%}
+    {%- include 'partials/ga.html' with context -%}
+{%- endif -%}
+
 {%- block bodyStart -%}
 
     {%- if gtm_cont_id -%}
