--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -97,6 +97,10 @@
 
 {%- block bodyStart -%}
 
+    {%- if gtm_tag_id -%}
+    {%- include 'partials/ga.html' with context -%}
+    {%- endif -%}
+
     {%- if gtm_cont_id -%}
         {%- include 'partials/gtm-no-script.html' with context -%}
     {%- endif -%}
