--- a/app/templates/partials/ga.html
+++ b/app/templates/partials/ga.html
@@ -1,7 +1,7 @@
 <!-- Google tag (gtag.js) --> 
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ gtm_tag_id }}"></script> 
+<script nonce="{{ cspNonce }}" async src="https://www.googletagmanager.com/gtag/js?id={{ gtm_tag_id }}"></script> 
 
-<script> 
+<script nonce="{{ cspNonce }}">
     window.dataLayer = window.dataLayer || []; 
     function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); 
     gtag('config', '{{ gtm_tag_id }}'); 
