943 google analytics implement code snippets (#113)
* Add the new code snippets

* Remove gtm_auth, add gtm_tag_id variable

* Add cookie settings checks

* Update the links in CSP headers to GA4 version

* Pin pipenv to avoid Travis failure

--- a/app/templates/base-en.html
+++ b/app/templates/base-en.html
@@ -85,15 +85,19 @@
 
 {%- block head -%}
 
-    {%- if gtm_cont_id and gtm_auth -%}
+    {%- if gtm_cont_id -%}
         {%- include 'partials/gtm.html' with context -%}
+    {%- endif -%}
+
+    {%- if gtm_tag_id -%}
+        {%- include 'partials/ga.html' with context -%}
     {%- endif -%}
 
 {%- endblock -%}
 
 {%- block bodyStart -%}
 
-    {%- if gtm_cont_id and gtm_auth -%}
+    {%- if gtm_cont_id -%}
         {%- include 'partials/gtm-no-script.html' with context -%}
     {%- endif -%}
 
