--- a/app/templates/partials/ga.html
+++ b/app/templates/partials/ga.html
@@ -2,7 +2,7 @@
 <script nonce="{{ cspNonce }}" async src="https://www.googletagmanager.com/gtag/js?id={{ gtm_tag_id }}"></script> 
 
 <script nonce="{{ cspNonce }}">
-    var allowTrackingCookies = /^(.*)?\s*'campaigns':true\s*[^;]+(.*)?$/;
+    var allowTrackingCookies = /^(.*)?\s*'usage':true\s*[^;]+(.*)?$/;
 
     if (document.cookie.match(allowTrackingCookies)) {
         window.dataLayer = window.dataLayer || []; 
