--- a/app/templates/partials/gtm.html
+++ b/app/templates/partials/gtm.html
@@ -1,6 +1,6 @@
 <!-- Google Tag Manager -->
 <script nonce="{{ cspNonce }}">
-    var allowTrackingCookies = /^(.*)?\s*'campaigns':true\s*[^;]+(.*)?$/;
+    var allowTrackingCookies = /^(.*)?\s*'usage':true\s*[^;]+(.*)?$/;
 
     if (document.cookie.match(allowTrackingCookies)) {
         (function(w,d,s,l,i){
